# BullyBot

./: Dockerfile  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt  run.py  supervisord.conf
src/: config.py  schemas.py
src/database/: connection.py
src/database/migrations/: env.py
src/database/migrations/versions/: 12cc010e151d_alembic.py  21ab121e151d.py
src/database/models/: __init__.py  butons.py  settings.py  sound.py  user.py
src/handlers/: __init__.py  join2group.py  start.py
src/handlers/admin_panel/: admin_panel.py
src/handlers/audio/: celery_cfg.py  celery_worker.py  voice.py
src/handlers/panel_for_admin/: __init__.py  add_new_button.py  add_sound.py  admin_panel.py  check_sounds.py  delete_button.py  delete_sound.py  dynamic_buttons.py  static_buttons.py  welcome_message.py
src/handlers/panel_for_user/: user_panel.py
src/states/: admin.py
src/utils/: filter.py  welcome_message.py
src/utils/keyboard/: admin.py  join2group.py  users.py
