[tool.poetry]
name = "bullybot"
version = "0.1.0"
description = "This is a bot description"
authors = ["yarolys <lysov.yaroslav.r@mail.ru>"]
readme = ""

[tool.poetry.dependencies]
python = "^3.12"
celery = "5.4.0"
redis = "5.2.1"
speechrecognition = "3.12.0"
aiogram = "3.15.0"
python-dotenv = "1.0.1"
alembic = "1.14.0"
aiofiles = "24.1.0"
aiohappyeyeballs = "2.4.4"
aiohttp = "3.10.11"
aiosignal = "1.3.1"
amqp = "5.3.1"
annotated-types = "0.7.0"
attrs = "24.2.0"
billiard = "4.2.1"
certifi = "2024.8.30"
click = "8.1.7"
click-didyoumean = "0.3.1"
click-plugins = "1.1.1"
click-repl = "0.3.0"
frozenlist = "1.5.0"
greenlet = "3.1.1"
idna = "3.10"
kombu = "5.4.2"
magic-filter = "1.0.12"
mako = "1.3.8"
markupsafe = "3.0.2"
multidict = "6.1.0"
prompt-toolkit = "3.0.48"
propcache = "0.2.1"
pydantic = "2.9.2"
pydantic-core = "2.23.4"
python-dateutil = "2.9.0.post0"
six = "1.17.0"
tzdata = "2024.2"
vine = "5.1.0"
wcwidth = "0.2.13"
yarl = "1.18.3"
loguru = "^0.7.3"
asyncpg = "^0.30.0"
pydub = "^0.25.1"
asgiref = "^3.8.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"